--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
+
 <body>
 
     <main>
@@ -46,7 +48,8 @@
                             Neymar Jr
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -55,7 +58,8 @@
                             Lionel Messi
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -64,7 +68,8 @@
                             Cristiano Ronaldo
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -73,7 +78,8 @@
                             Paulo Dybala
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -82,7 +88,8 @@
                             Mesut Özil
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -91,7 +98,8 @@
                             Mauro Icardi
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -100,7 +108,8 @@
                             Di María
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -109,7 +118,8 @@
                             Kylian Mbappé
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -118,7 +128,8 @@
                             Mohamed Salah
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -127,7 +138,8 @@
                             Harry Kane
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -136,7 +148,8 @@
                             Kevin De Bruyne
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                     <div class="player">
@@ -145,7 +158,8 @@
                             Philippe Coutinho
                         </h2>
                         <p class="player-details">
-                            Welcome to the official Football Club. Get all the latest news, videos and ticket information as well as player profiles and information about Stamford.
+                            Welcome to the official Football Club. Get all the latest news, videos and ticket
+                            information as well as player profiles and information about Stamford.
                         </p>
                     </div>
                 </div>
@@ -162,7 +176,8 @@
                             All Highlights Copa America 2021
                         </h2>
                         <p>
-                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                         </p>
                         <button><a href="#">Watch Now <i class="fas fa-arrow-right"></i> </a></button>
                     </div>
@@ -178,26 +193,26 @@
         <section id="sponsors">
             <div class="sponsors-container">
                 <div class="sponsors-items">
-                    <img src="images/sponsors/sponsor-1.png" alt="sponsor-1">
-                    <img src="images/sponsors/sponsor-2.png" alt="sponsor-2">
-                    <img src="images/sponsors/sponsor-3.png" alt="sponsor-3">
-                    <img src="images/sponsors/sponsor-4.png" alt="sponsor-4">
-                    <img src="images/sponsors/sponsor-5.png" alt="sponsor-5">
-                    <img src="images/sponsors/sponsor-6.png" alt="sponsor-6">
-                    <img src="images/sponsors/sponsor-1.png" alt="sponsor-1">
-                    <img src="images/sponsors/sponsor-2.png" alt="sponsor-2">
-                    <img src="images/sponsors/sponsor-3.png" alt="sponsor-3">
-                    <img src="images/sponsors/sponsor-4.png" alt="sponsor-4">
-                    <img src="images/sponsors/sponsor-5.png" alt="sponsor-5">
-                    <img src="images/sponsors/sponsor-6.png" alt="sponsor-6">
-                    <img src="images/sponsors/sponsor-1.png" alt="sponsor-1">
-                    <img src="images/sponsors/sponsor-2.png" alt="sponsor-2">
-                    <img src="images/sponsors/sponsor-3.png" alt="sponsor-3">
-                    <img src="images/sponsors/sponsor-4.png" alt="sponsor-4">
-                    <img src="images/sponsors/sponsor-5.png" alt="sponsor-5">
-                    <img src="images/sponsors/sponsor-6.png" alt="sponsor-6">
-                    <img src="images/sponsors/sponsor-2.png" alt="sponsor-2">
-                    <img src="images/sponsors/sponsor-3.png" alt="sponsor-3">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
+                    <img src="images/sponsors/sponsor-3.png" alt="">
+                    <img src="images/sponsors/sponsor-1.png" alt="">
+                    <img src="images/sponsors/sponsor-2.png" alt="">
                 </div>
             </div>
         </section>
@@ -205,38 +220,38 @@
         <!--======================== Match Chart Section Here ========================-->
 
         <section id="match-chart">
-                    <fieldset class="fieldset">
-                        <legend>
-                            matches
-                        </legend>
-                        <div class="fieldset-grid">
-                            <div class="fieldset-items">
-                                <span>
-                                    <h2>CHAMPIONS LEAGUE  | FINAL</h2>
-                                    <p>ESTÁDIO DO DRAGÃO |</p>
-                                    <p>30 MAY 2023, 01:00 AM</p>
-                                    <p>
-                                        Manchester City vs Chelsea
-                                    </p>
-                                </span>
-                                <span>
-                                    <h2>FRIENDLY</h2>
-                                    <p>EMIRATES STADIUM01 AUG 2023, 08:00 PM</p>
-                                    <p>
-                                        Arsenal City vs Chelsea
-                                    </p>
-                                </span>
-                                <span>
-                                    <h2>CHAMPIONS LEAGUE  | FINAL</h2>
-                                    <p>ESTÁDIO DO DRAGÃO |</p>
-                                    <p>30 MAY 2023, 01:00 AM</p>
-                                    <p>
-                                        Manchester City vs Chelsea
-                                    </p>
-                                </span>
-                            </div>
-                        </div>                        
-                    </fieldset>
+            <fieldset class="fieldset">
+                <legend>
+                    matches
+                </legend>
+                <div class="fieldset-grid">
+                    <div class="fieldset-items">
+                        <span>
+                            <h2>CHAMPIONS LEAGUE | FINAL</h2>
+                            <p>ESTÁDIO DO DRAGÃO |</p>
+                            <p>30 MAY 2023, 01:00 AM</p>
+                            <p>
+                                Manchester City vs Chelsea
+                            </p>
+                        </span>
+                        <span>
+                            <h2>FRIENDLY</h2>
+                            <p>EMIRATES STADIUM01 AUG 2023, 08:00 PM</p>
+                            <p>
+                                Arsenal City vs Chelsea
+                            </p>
+                        </span>
+                        <span>
+                            <h2>CHAMPIONS LEAGUE | FINAL</h2>
+                            <p>ESTÁDIO DO DRAGÃO |</p>
+                            <p>30 MAY 2023, 01:00 AM</p>
+                            <p>
+                                Manchester City vs Chelsea
+                            </p>
+                        </span>
+                    </div>
+                </div>
+            </fieldset>
         </section>
 
         <!--======================== Footer Section Here ========================-->
@@ -264,4 +279,5 @@
 
     </main>
 </body>
+
 </html>
